# PlasmidRL

./: .gitignore  AGENTS.md  Dockerfile  README.md  SWEEPS.md  devops.md  docker-compose.yaml  main.py  pyproject.toml  sweep_config.yaml
.github/workflows/: tests.yml
config/: naive_grpo.yaml  verl_grpo.yaml  verl_naive_ppo.yaml  verl_ppo.yaml
data/: train.parquet
data/verl/: test.parquet  train.parquet
docker/: Dockerfile  grpo.Dockerfile  ray-cpu-uv.Dockerfile  ray-gpu-uv.Dockerfile  verl-monkey.patch  verl.Dockerfile  verl_monkey_patch.patch
infra/eks/: add_nodegroups.sh  cluster.yaml  install_addons.sh
infra/kuberay/: experiments.yaml  raycluster.yaml  rayjob-gpu.yaml
infra/kuberay/templates/: rayjob.tmpl.yaml
lightning_logs/version_0/: events.out.tfevents.1758109540.35730130c314.1.0
lightning_logs/version_1/: events.out.tfevents.1758109740.3e1bada06b21.1.0
lightning_logs/version_2/: events.out.tfevents.1758109936.88c1daa8f0dd.1.0
notebooks/: plasmid-rewards.ipynb  ray_test.ipynb  torchrl.ipynb  verl-prep.ipynb
outputs/2025-10-17/13-00-05/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-17/13-09-13/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-17/13-11-38/.hydra/: hydra.yaml
outputs/2025-10-17/13-15-40/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-17/14-32-20/.hydra/: hydra.yaml
outputs/2025-10-17/14-36-49/.hydra/: hydra.yaml
results/evo2/dev/: nemo_error_log.txt
results/evo2/dev/run_0/: nemo_log_globalrank-0_localrank-0.txt
results/evo2/dev/run_1/: nemo_log_globalrank-0_localrank-0.txt
results/evo2/dev/run_2/: nemo_error_log.txt
results/evo2/dev/run_3/: nemo_error_log.txt  (+1 more)
results/evo2/wandb/: latest-run
reward_model/data/: README.md  plasmid_instability_hits.csv
reward_model/scripts/: syn_neg_plasmids.py  unstable_plasmid_scraper.py
scripts/: build_and_push_images.sh  check_parquet_prompts.py  publish_naive_llama_to_hf.py  run_experiment.sh  secure_head_lb.sh
sft/: README.md  config.env  convert_model.sh  preprocess_evo2.json  preprocess_fasta.sh  train_evo2.sh  train_evo2.yaml
src/: README.md  cli.py  config.py  main.py
src/envs/: stateless_chat.py
src/eval/: eval.py  eval_config.py  infer.py  qc.py
src/objectives/: __init__.py  simple_mc_advantage.py
src/rewards/: __init__.py  plasmid_informatics.py  reward_config.py  rewards.py  scorer.py  verl_reward.py
src/rewards/bioinformatics/: logger.py  reward_config.py  scorer.py
src/runners/: es.py  generate_samples.py  grpo.py  grpo_sweep.py  qc_pipeline.py  rl_env.py
src/utils/: misc_transforms.py  model_utils.py  training_utils.py
sweeps/: README.md  SWEEPS.md  run_sweep_agent.py
sweeps/configs/: sweep_config.yaml  sweep_config_length_reward.yaml  sweep_config_refined.yaml  sweep_config_training.yaml  sweep_config_training_with_eval.yaml  sweep_config_training_with_length.yaml
tests/: test_rewards.py
(+19 files in other folders)
