[project]
name = "plasmidrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.8"
dependencies = [
    "accelerate>=1.10.1",
    "click>=8.1.7",
    "ipykernel>=6.30.1",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.7",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyterlab>=4.4.7",
    "plannotate-python>=1.2.7",
    "psutil>=7.0.0",
    "pyzmq>=27.0.2",
    "tensordict>=0.9.1",
    "torchrl[llm]>=0.9.2",
    "tornado>=6.5.2",
    "traitlets>=5.14.3",
    "transformers>=4.56.1",
    "trl>=0.22.2",
    "wandb>=0.21.3",
]
