[project]
name = "plasmidrl"
version = "0.1.0"
description = "Project based on using RL to make plasmids"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "click>=8.1.7",
    "ipykernel>=6.30.1",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.7",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyterlab>=4.4.7",
    "plasmidkit",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyzmq>=27.0.2",
    "tensordict>=0.9.1",
    "torchrl[llm]>=0.9.2",
    "tornado>=6.5.2",
    "traitlets>=5.14.3",
    "transformers>=4.56.1",
    "trl[vllm]>=0.22.2",
    "wandb>=0.21.3",
]


dev = [
    # Development dependencies
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[tool.uv.sources]
plasmidkit = { git = "https://github.com/McClain-Thiel/plasmid-kit.git" }
